--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -9,8 +9,8 @@
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
                 <mat-option value="0">--select--</mat-option>
-                <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
-                    {{item.MasterDataName}}
+                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                    {{item.ClassName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
