--- a/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
+++ b/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
@@ -1,48 +1,37 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div style="padding: 15px;"><strong>Class Subject Teacher</strong></div>
+        <div style="padding: 15px;"><strong>Class Master</strong></div>
 
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline">
-                <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId">
-                    <mat-option value="0">--select--</mat-option>
-                    <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
+                    <mat-option [value]="0">select class</mat-option>
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                        {{item.ClassName}}</mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubject()">
+            <mat-form-field [style.width.pc]="25" appearance="outline">
+                <mat-label>Teacher</mat-label>
+                <input type="text" matInput formControlName="searchTeacherId" [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        {{option.TeacherName}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassTeacher()">
                 <mat-icon>search</mat-icon>
             </button>
         </form>
         <mat-table #table [dataSource]="dataSource">
-            <!-- <ng-container matColumnDef="ClassName">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class/stream
-                </mat-header-cell>
-                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    {{element.ClassName}}
-                </mat-cell>
-            </ng-container> -->
-            <ng-container matColumnDef="SubjectName">
-                <mat-header-cell *matHeaderCellDef> Subject </mat-header-cell>
+
+            <ng-container matColumnDef="Section">
+                <mat-header-cell *matHeaderCellDef> Section </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.SubjectName}}
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="SubjectTypeId">
-                <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-form-field>
-                        <mat-label>subject type</mat-label>
-                        <mat-select (selectionChange)="updateSelectHowMany(element)" [value]="element.SubjectTypeId"
-                            [(ngModel)]="element.SubjectTypeId">
-                            <mat-option *ngFor="let item of SubjectTypes" [value]="item.SubjectTypeId">
-                                {{item.SubjectTypeName}}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
+                    {{element.Section}}
+
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="TeacherId">
@@ -51,9 +40,7 @@
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field [style.width.pc]="25">
                         <mat-label>Teacher</mat-label>
-                        <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId"
-                            [value]="element.TeacherId">
-                            <mat-option [value]="0">select</mat-option>
+                        <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId">
                             <mat-option *ngFor="let option of Teachers" [value]="option.TeacherId">
                                 {{option.TeacherName}}
                             </mat-option>
@@ -73,11 +60,10 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || !element.Action || CheckPermission=='read'" matTooltip="save"
+                    <button [disabled]="loading || CheckPermission=='read' || !element.Action" matTooltip="save"
                         mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
-
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
