--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -16,7 +16,8 @@ button{
 }
 .mat-card{
     position: relative;
-    margin-top:220px; 
+    margin-top:15px; 
+    max-height: 350px;
 }
 .width100{
     width: 100%;
