--- a/src/app/modules/auth/register/register.component.scss
+++ b/src/app/modules/auth/register/register.component.scss
@@ -15,7 +15,8 @@ button{
 }
 .mat-card{
     position: relative;
-    //margin-top:120px; 
+    margin-top:15px; 
+    width: 50%;
 }
 .width100{
     width: 100%;
