--- a/src/app/modules/classes/classboard/classboard.component.html
+++ b/src/app/modules/classes/classboard/classboard.component.html
@@ -6,25 +6,25 @@
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)">
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>loyalty</mat-icon> Class/Course Detail
+                        <mat-icon>loyalty</mat-icon> Detail
                     </ng-template>
                     <app-classdetail></app-classdetail>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>lightbulb</mat-icon> Class Fee
+                        <mat-icon>lightbulb</mat-icon> Fee
                     </ng-template>
                     <app-dashboardclassfee></app-dashboardclassfee>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>foundation</mat-icon> Class Prerequisites
+                        <mat-icon>foundation</mat-icon> Pre-requisites
                     </ng-template>
                     <app-classprerequisite></app-classprerequisite>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
-                        <mat-icon>info</mat-icon>Class Master
+                        <mat-icon>info</mat-icon> Master
                     </ng-template>
                     <app-classmasterdashboard></app-classmasterdashboard>
                 </mat-tab>
