--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -12,7 +12,7 @@
 </div>
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Class Fees</strong></div>
+        <div><strong>Fee</strong></div>
     </div>
     <alert></alert>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
