--- a/src/app/modules/classes/classprerequisite/classprerequisite.component.html
+++ b/src/app/modules/classes/classprerequisite/classprerequisite.component.html
@@ -1,6 +1,6 @@
 <div style="width: 100%;">
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Class Pre-requisites</strong></div>
+        <div><strong>Pre-requisite</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
