--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center space-between">
     <div>
         <mat-card class="boxes">
-            <mat-card-title>Essential data setting</mat-card-title>
+            <mat-card-title>Essential Data</mat-card-title>
             <mat-card-content>
                 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
                 <alert></alert>
