--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,21 +19,7 @@
                 <mat-icon *ngIf="deviceXs">more_vert</mat-icon>
                 <mat-icon *ngIf="!deviceXs">account_circle</mat-icon>
             </button>
-            <span style="margin-right: 10px;font-size:medium;color:white">
-                <form [formGroup]="searchForm">
-                    <mat-form-field [style.width.px]="250">
-                        <mat-select formControlName="searchApplicationId" (selectionChange)="ChangeApplication($event)">
-                            <mat-option *ngFor="let item of PermittedApplications" [value]="item.applicationId">
-                                {{item.applicationName}}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field [style.width.px]="130">
-                        <mat-select formControlName="searchBatchId" (selectionChange)="ChangeCurrentBatchId($event)">
-                            <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </form>
-            </span>
+            
             <mat-menu #menu="matMenu">
                 <button [disabled]="loading" mat-menu-item *ngIf="!loggedIn" (click)="gotoLogin()">
                     <mat-icon>login</mat-icon>login
@@ -79,9 +65,9 @@
            
             <span><strong>ST. PAUL'S INSTITUTE</strong></span>            
         </div> -->
-        <button [disabled]="loading" mat-button (click)="newsNEvents()">
+        <!-- <button [disabled]="loading" mat-button (click)="newsNEvents()">
             <mat-icon>announcement</mat-icon><span style="color: white;">News & Events</span>
-        </button>
+        </button> -->
         <button [disabled]="loading" mat-button (click)="contactus()">
             <mat-icon>contact_support</mat-icon><span>Contact Us</span>
         </button>
